cambios footer pedido

--- a/app/cobertura_oncologica.html
+++ b/app/cobertura_oncologica.html
@@ -180,7 +180,7 @@
 
     <footer>
       <ul class="contFooter">
-        <li class="imgFooter">
+      <li class="imgFooter imgFooterMovil">
           <a href="https://www.mutualdeseguros.cl/" target="_blank">
             <figure class="enLinea">
               <img src="images/logo.png" alt="">
@@ -198,8 +198,18 @@
           <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
           <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
         </li>
+        <li class="imgFooter imgFooterDesktop">
+          <a href="https://www.mutualdeseguros.cl/" target="_blank">
+            <figure class="enLinea">
+              <img src="images/logo.png" alt="">
+            </figure>
+          </a>         
+        </li>
       </ul>
     </footer>
+    <div class="copyright">
+      <p>Todos los derechos reservados Mutual de Seguros de Chile© Copyright 2014 - 2015</p>
+    </div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
