--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -61,7 +61,7 @@
 
         <div class="tabsBottom linksTo inlineBlock top marginTopZero menuArriba tabMobile">
           <ul id="tabs" class="nav" data-tabs="tabs">
-              <li class="active"><a class="scroll botonMenu" href="#ventajas" data-toggle="tab"><span class="futuraBold gris">Venajas</span></a></li>
+              <li class="active"><a class="scroll botonMenu" href="#ventajas" data-toggle="tab"><span class="futuraBold gris">Ventajas</span></a></li>
               <li><a class="scroll botonMenu" href="#atributos" data-toggle="tab"><span class="futuraBold gris">Atributos</span></a></li>
               <li><a class="scroll botonMenu" href="#cobertuas" data-toggle="tab"><span class="futuraBold gris">Coberturas Opcionales</span></a></li>
               <li><a class="scroll botonMenu" href="#pagos" data-toggle="tab"><span class="futuraBold gris">Medios de Pago</span></a></li>
@@ -263,7 +263,7 @@
 
     <footer>
       <ul class="contFooter">
-        <li class="imgFooter">
+      <li class="imgFooter imgFooterMovil">
           <a href="https://www.mutualdeseguros.cl/" target="_blank">
             <figure class="enLinea">
               <img src="images/logo.png" alt="">
@@ -281,8 +281,18 @@
           <p><span class="destacadoFooter capitulizar">Desde celulares</span> (32) 2326707</p>
           <p><span class="destacadoFooter capitulizar">Email: </span><a class="gris" href="https://www.mutualdeseguros.cl/contacto/" target="_blank">contacto@mutualdeseguros.cl</a></p>
         </li>
+        <li class="imgFooter imgFooterDesktop">
+          <a href="https://www.mutualdeseguros.cl/" target="_blank">
+            <figure class="enLinea">
+              <img src="images/logo.png" alt="">
+            </figure>
+          </a>         
+        </li>
       </ul>
     </footer>
+    <div class="copyright">
+      <p>Todos los derechos reservados Mutual de Seguros de Chile© Copyright 2014 - 2015</p>
+    </div>
 
 
     <!-- build:js(.) scripts/vendor.js -->
