--- a/app/index.html
+++ b/app/index.html
@@ -199,7 +199,7 @@
       </ul>
     </footer>
     <div class="copyright">
-      <p>Todos los derechos reservados Mutual de Seguros de Chile© Copyright 2014 - 2015</p>
+      <p>Todos los derechos reservados Mutual de Seguros de Chile© Copyright 2015</p>
     </div>
 
     
