--- a/app/papa-seguro.html
+++ b/app/papa-seguro.html
@@ -248,7 +248,7 @@
 
         <div class="tabsBottom linksTo inlineBlock top marginTopZero menuArriba tabDesktop">
           <ul id="tabs" class="nav" data-tabs="tabs">
-              <li class="active"><a class="scroll botonMenu" href="#ventajas" data-toggle="tab"><span class="futuraBold gris">Venajas</span></a></li>
+              <li class="active"><a class="scroll botonMenu" href="#ventajas" data-toggle="tab"><span class="futuraBold gris">Ventajas</span></a></li>
               <li><a class="scroll botonMenu" href="#atributos" data-toggle="tab"><span class="futuraBold gris">Atributos</span></a></li>
               <li><a class="scroll botonMenu" href="#cobertuas" data-toggle="tab"><span class="futuraBold gris">Coberturas Opcionales</span></a></li>
               <li><a class="scroll botonMenu" href="#pagos" data-toggle="tab"><span class="futuraBold gris">Medios de Pago</span></a></li>
@@ -291,7 +291,7 @@
       </ul>
     </footer>
     <div class="copyright">
-      <p>Todos los derechos reservados Mutual de Seguros de Chile© Copyright 2014 - 2015</p>
+      <p>Todos los derechos reservados Mutual de Seguros de Chile© Copyright 2015</p>
     </div>
 
 
